find_package(Boost COMPONENTS unit_test_framework REQUIRED)

function(add_test_executable TARGET_NAME SOURCES)
  add_executable(${TARGET_NAME} ${SOURCES})
  target_link_libraries(${TARGET_NAME} PUBLIC mpl::mpl Boost::unit_test_framework)
  add_test(NAME ${TARGET_NAME} COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ${MPIEXEC_PREFLAGS} ./${TARGET_NAME} ${MPIEXEC_POSTFLAGS})
endfunction()

add_test_executable(test_communicator test_communicator.cc)
add_test_executable(test_cart_communicator test_cart_communicator.cc)
add_test_executable(test_graph_communicator test_graph_communicator.cc)
add_test_executable(test_dist_graph_communicator test_dist_graph_communicator.cc)
add_test_executable(test_communicator_send_recv test_communicator_send_recv.cc)
add_test_executable(test_communicator_isend_irecv test_communicator_isend_irecv.cc test_helper.hpp)
add_test_executable(test_communicator_init_send_init_recv test_communicator_init_send_init_recv.cc test_helper.hpp)
add_test_executable(test_communicator_sendrecv test_communicator_sendrecv.cc test_helper.hpp)
add_test_executable(test_communicator_probe test_communicator_probe.cc test_helper.hpp)
add_test_executable(test_communicator_mprobe_mrecv test_communicator_mprobe_mrecv.cc test_helper.hpp)
add_test_executable(test_communicator_barrier test_communicator_barrier.cc)
add_test_executable(test_communicator_bcast test_communicator_bcast.cc)
add_test_executable(test_communicator_gather test_communicator_gather.cc)
add_test_executable(test_collective test_collective.cc)
add_test_executable(test_icollective test_icollective.cc)
add_test_executable(test_collectivev test_collectivev.cc)
add_test_executable(test_icollectivev test_icollectivev.cc)
add_test_executable(test_reduce test_reduce.cc)
add_test_executable(test_ireduce test_ireduce.cc)
add_test_executable(test_scan test_scan.cc)
add_test_executable(test_iscan test_iscan.cc)
add_test_executable(test_exscan test_exscan.cc)
add_test_executable(test_iexscan test_iexscan.cc)
add_test_executable(test_reduce_scatter test_reduce_scatter.cc)
add_test_executable(test_ireduce_scatter test_ireduce_scatter.cc)
